--- a/sass/btns.scss
+++ b/sass/btns.scss
@@ -61,6 +61,10 @@
     border: 1px solid #d4d4d4;
     // text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
 
+    //Shadow
+    &.cb-shadow{
+        box-shadow: 1px 1px 1px #000;
+    }
 
     &:hover,
     &:focus {
