--- a/sass/btns.scss
+++ b/sass/btns.scss
@@ -141,3 +141,42 @@
         transition: left 1.4s;
     }
 }
+
+.cb-group {
+    display: flex;
+    flex-direction: row;
+
+    &.cb-shadow{
+        box-shadow: 1px 1px 1px #000;
+    }
+
+    .css-btn {
+        margin: 0 !important;
+        border: 1px solid #d0d0d0;
+
+        &.cb-shadow{
+            box-shadow: none;
+        }
+
+        &:active,
+        &.cb-active {
+            border-left: 1px solid transparent;
+        }
+
+        &:first-child:not(:last-child) {
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 0;
+        }
+
+        &:last-child:not(:first-child) {
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+            margin-left: -1px !important;
+        }
+
+        &:not(:first-child):not(:last-child) {
+            margin-left: -1px !important;
+            border-radius: 0;
+        }
+    }
+}
