--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,16 @@
         border-radius: 3px;
         font-family: 'Dosis', sans-serif;
 
+        .code {
+            xmp {
+                white-space: pre-line;
+                padding: 8px;
+                background: #e0e0e0;
+                display: inline-block;
+                border-radius: 4px;
+                box-shadow: inset 0px 1px 2px grey;
+            }
+        }
         .css-btn {
             margin-right: 15px;
         }
